EFCore context added Bug : models misses Primary Keys

--- a/Checkpoint3_PetitesAnnonces/Views/Home/Create.cshtml
+++ b/Checkpoint3_PetitesAnnonces/Views/Home/Create.cshtml
@@ -23,7 +23,7 @@
                         <input type="text" id="Description_modif" value="Une description" /><br />
                         <label for="Price"> Combien :</label>
                         <input type="text" id="Price_Modif" value="Un prix" /><br /><br />
-                        <input type="submit" value="Modifier" />
+                        <input type="submit" value="Publier" />
                     </form>
                 </p>
             </div>
